--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Backoffice admin"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Backoffice admin</title>
   </head>
